sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  for (i <- 1 to getNombreValeurs-1)  {
    var v = getValeur(i)
    for (j<-i to 0 by -1) {
      copie(j,j-1)
      j=j-1
    }
    setValeur(i,v)
  }
}